Projeto_Compilador/Projeto-PL-2025/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PROCEDURE

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID ; block .
Rule 2     block -> declarations BEGIN optional_statements END
Rule 3     optional_statements -> statements
Rule 4     optional_statements -> empty
Rule 5     declarations -> declarations declaration
Rule 6     declarations -> declaration
Rule 7     declarations -> empty
Rule 8     declaration -> VAR var_declarations
Rule 9     declaration -> function_declaration
Rule 10    var_declarations -> var_declarations var_declaration
Rule 11    var_declarations -> var_declaration
Rule 12    function_declaration -> FUNCTION ID ( param_list_opt ) : type ; function_block ;
Rule 13    function_block -> VAR var_declarations BEGIN optional_statements END
Rule 14    function_block -> BEGIN optional_statements END
Rule 15    param_list_opt -> param_list
Rule 16    param_list_opt -> empty
Rule 17    param_list -> param_list , param
Rule 18    param_list -> param
Rule 19    param -> ID : type
Rule 20    id_list -> ID
Rule 21    id_list -> id_list , ID
Rule 22    var_declaration -> id_list : type ;
Rule 23    type -> INTEGER
Rule 24    type -> BOOLEAN
Rule 25    type -> STRING_TYPE
Rule 26    type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type
Rule 27    statements -> statements statement ;
Rule 28    statements -> statements statement
Rule 29    statements -> statement ;
Rule 30    statements -> statement
Rule 31    statement -> assignment
Rule 32    statement -> if_statement
Rule 33    statement -> while_loop
Rule 34    statement -> for_loop
Rule 35    statement -> compound_statement
Rule 36    statement -> writeln
Rule 37    statement -> write
Rule 38    statement -> readln
Rule 39    statement -> empty
Rule 40    assignment -> variable ASSIGN expression
Rule 41    if_statement -> IF expression THEN statement ELSE statement
Rule 42    if_statement -> IF expression THEN statement
Rule 43    variable -> ID
Rule 44    variable -> variable LBRACKET expression RBRACKET
Rule 45    while_loop -> WHILE expression DO statement
Rule 46    for_loop -> FOR ID ASSIGN expression TO expression DO statement
Rule 47    for_loop -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 48    compound_statement -> BEGIN statements END
Rule 49    expression -> STRING
Rule 50    writeln -> WRITELN ( expression_list )
Rule 51    write -> WRITE ( expression_list )
Rule 52    readln -> READLN ( expression_list )
Rule 53    expression -> expression + expression
Rule 54    expression -> expression - expression
Rule 55    expression -> expression * expression
Rule 56    expression -> expression / expression
Rule 57    expression -> expression DIV expression
Rule 58    expression -> expression MOD expression
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> expression = expression
Rule 62    expression -> expression < expression
Rule 63    expression -> expression > expression
Rule 64    expression -> expression LE expression
Rule 65    expression -> expression GE expression
Rule 66    expression -> expression NE expression
Rule 67    expression -> NOT expression
Rule 68    expression -> ( expression )
Rule 69    expression -> NUMBER
Rule 70    expression -> TRUE
Rule 71    expression -> FALSE
Rule 72    expression -> ID LBRACKET expression RBRACKET
Rule 73    expression -> variable
Rule 74    expression -> ID
Rule 75    expression_list -> expression
Rule 76    expression_list -> expression_list , expression
Rule 77    expression -> ID ( expression_list_opt )
Rule 78    expression_list_opt -> expression_list
Rule 79    expression_list_opt -> empty
Rule 80    empty -> <empty>

Terminals, with rules where they appear

(                    : 12 50 51 52 68 77
)                    : 12 50 51 52 68 77
*                    : 55
+                    : 53
,                    : 17 21 76
-                    : 54
.                    : 1
/                    : 56
:                    : 12 19 22
;                    : 1 12 12 22 27 29
<                    : 62
=                    : 61
>                    : 63
AND                  : 59
ARRAY                : 26
ASSIGN               : 40 46 47
BEGIN                : 2 13 14 48
BOOLEAN              : 24
DIV                  : 57
DO                   : 45 46 47
DOTDOT               : 26
DOWNTO               : 47
ELSE                 : 41
END                  : 2 13 14 48
FALSE                : 71
FOR                  : 46 47
FUNCTION             : 12
GE                   : 65
ID                   : 1 12 19 20 21 43 46 47 72 74 77
IF                   : 41 42
INTEGER              : 23
LBRACKET             : 26 44 72
LE                   : 64
MOD                  : 58
NE                   : 66
NOT                  : 67
NUMBER               : 26 26 69
OF                   : 26
OR                   : 60
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 26 44 72
READLN               : 52
STRING               : 49
STRING_TYPE          : 25
THEN                 : 41 42
TO                   : 46
TRUE                 : 70
VAR                  : 8 13
WHILE                : 45
WRITE                : 51
WRITELN              : 50
error                : 

Nonterminals, with rules where they appear

assignment           : 31
block                : 1
compound_statement   : 35
declaration          : 5 6
declarations         : 2 5
empty                : 4 7 16 39 79
expression           : 40 41 42 44 45 46 46 47 47 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 68 72 75 76
expression_list      : 50 51 52 76 78
expression_list_opt  : 77
for_loop             : 34
function_block       : 12
function_declaration : 9
id_list              : 21 22
if_statement         : 32
optional_statements  : 2 13 14
param                : 17 18
param_list           : 15 17
param_list_opt       : 12
program              : 0
readln               : 38
statement            : 27 28 29 30 41 41 42 45 46 47
statements           : 3 27 28 48
type                 : 12 19 22 26
var_declaration      : 10 11
var_declarations     : 8 10 13
variable             : 40 44 73
while_loop           : 33
write                : 37
writeln              : 36

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID ; block .

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID ; block .

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . ; block .

    ;               shift and go to state 4


state 4

    (1) program -> PROGRAM ID ; . block .
    (2) block -> . declarations BEGIN optional_statements END
    (5) declarations -> . declarations declaration
    (6) declarations -> . declaration
    (7) declarations -> . empty
    (8) declaration -> . VAR var_declarations
    (9) declaration -> . function_declaration
    (80) empty -> .
    (12) function_declaration -> . FUNCTION ID ( param_list_opt ) : type ; function_block ;

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
    VAR             shift and go to state 9
    BEGIN           reduce using rule 80 (empty -> .)
    FUNCTION        shift and go to state 11

  ! VAR             [ reduce using rule 80 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 80 (empty -> .) ]

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    declaration                    shift and go to state 7
    empty                          shift and go to state 8
    function_declaration           shift and go to state 10

state 5

    (1) program -> PROGRAM ID ; block . .

    .               shift and go to state 12


state 6

    (2) block -> declarations . BEGIN optional_statements END
    (5) declarations -> declarations . declaration
    (8) declaration -> . VAR var_declarations
    (9) declaration -> . function_declaration
    (12) function_declaration -> . FUNCTION ID ( param_list_opt ) : type ; function_block ;

    BEGIN           shift and go to state 13
    VAR             shift and go to state 9
    FUNCTION        shift and go to state 11

    declaration                    shift and go to state 14
    function_declaration           shift and go to state 10

state 7

    (6) declarations -> declaration .

    BEGIN           reduce using rule 6 (declarations -> declaration .)
    VAR             reduce using rule 6 (declarations -> declaration .)
    FUNCTION        reduce using rule 6 (declarations -> declaration .)


state 8

    (7) declarations -> empty .

    BEGIN           reduce using rule 7 (declarations -> empty .)
    VAR             reduce using rule 7 (declarations -> empty .)
    FUNCTION        reduce using rule 7 (declarations -> empty .)


state 9

    (8) declaration -> VAR . var_declarations
    (10) var_declarations -> . var_declarations var_declaration
    (11) var_declarations -> . var_declaration
    (22) var_declaration -> . id_list : type ;
    (20) id_list -> . ID
    (21) id_list -> . id_list , ID

    ID              shift and go to state 18

    var_declarations               shift and go to state 15
    var_declaration                shift and go to state 16
    id_list                        shift and go to state 17

state 10

    (9) declaration -> function_declaration .

    BEGIN           reduce using rule 9 (declaration -> function_declaration .)
    VAR             reduce using rule 9 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> function_declaration .)


state 11

    (12) function_declaration -> FUNCTION . ID ( param_list_opt ) : type ; function_block ;

    ID              shift and go to state 19


state 12

    (1) program -> PROGRAM ID ; block . .

    $end            reduce using rule 1 (program -> PROGRAM ID ; block . .)


state 13

    (2) block -> declarations BEGIN . optional_statements END
    (3) optional_statements -> . statements
    (4) optional_statements -> . empty
    (27) statements -> . statements statement ;
    (28) statements -> . statements statement
    (29) statements -> . statement ;
    (30) statements -> . statement
    (80) empty -> .
    (31) statement -> . assignment
    (32) statement -> . if_statement
    (33) statement -> . while_loop
    (34) statement -> . for_loop
    (35) statement -> . compound_statement
    (36) statement -> . writeln
    (37) statement -> . write
    (38) statement -> . readln
    (39) statement -> . empty
    (40) assignment -> . variable ASSIGN expression
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) if_statement -> . IF expression THEN statement
    (45) while_loop -> . WHILE expression DO statement
    (46) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (47) for_loop -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (48) compound_statement -> . BEGIN statements END
    (50) writeln -> . WRITELN ( expression_list )
    (51) write -> . WRITE ( expression_list )
    (52) readln -> . READLN ( expression_list )
    (43) variable -> . ID
    (44) variable -> . variable LBRACKET expression RBRACKET

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READLN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    END             reduce using rule 80 (empty -> .)
    ;               reduce using rule 80 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    BEGIN           shift and go to state 20
    WRITELN         shift and go to state 38
    WRITE           shift and go to state 39
    READLN          shift and go to state 40
    ID              shift and go to state 37

  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! FOR             [ reduce using rule 80 (empty -> .) ]
  ! BEGIN           [ reduce using rule 80 (empty -> .) ]
  ! WRITELN         [ reduce using rule 80 (empty -> .) ]
  ! WRITE           [ reduce using rule 80 (empty -> .) ]
  ! READLN          [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]

    optional_statements            shift and go to state 21
    statements                     shift and go to state 22
    empty                          shift and go to state 23
    statement                      shift and go to state 24
    assignment                     shift and go to state 25
    if_statement                   shift and go to state 26
    while_loop                     shift and go to state 27
    for_loop                       shift and go to state 28
    compound_statement             shift and go to state 29
    writeln                        shift and go to state 30
    write                          shift and go to state 31
    readln                         shift and go to state 32
    variable                       shift and go to state 33

state 14

    (5) declarations -> declarations declaration .

    BEGIN           reduce using rule 5 (declarations -> declarations declaration .)
    VAR             reduce using rule 5 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 5 (declarations -> declarations declaration .)


state 15

    (8) declaration -> VAR var_declarations .
    (10) var_declarations -> var_declarations . var_declaration
    (22) var_declaration -> . id_list : type ;
    (20) id_list -> . ID
    (21) id_list -> . id_list , ID

    BEGIN           reduce using rule 8 (declaration -> VAR var_declarations .)
    VAR             reduce using rule 8 (declaration -> VAR var_declarations .)
    FUNCTION        reduce using rule 8 (declaration -> VAR var_declarations .)
    ID              shift and go to state 18

    var_declaration                shift and go to state 41
    id_list                        shift and go to state 17

state 16

    (11) var_declarations -> var_declaration .

    ID              reduce using rule 11 (var_declarations -> var_declaration .)
    BEGIN           reduce using rule 11 (var_declarations -> var_declaration .)
    VAR             reduce using rule 11 (var_declarations -> var_declaration .)
    FUNCTION        reduce using rule 11 (var_declarations -> var_declaration .)


state 17

    (22) var_declaration -> id_list . : type ;
    (21) id_list -> id_list . , ID

    :               shift and go to state 42
    ,               shift and go to state 43


state 18

    (20) id_list -> ID .

    :               reduce using rule 20 (id_list -> ID .)
    ,               reduce using rule 20 (id_list -> ID .)


state 19

    (12) function_declaration -> FUNCTION ID . ( param_list_opt ) : type ; function_block ;

    (               shift and go to state 44


state 20

    (48) compound_statement -> BEGIN . statements END
    (27) statements -> . statements statement ;
    (28) statements -> . statements statement
    (29) statements -> . statement ;
    (30) statements -> . statement
    (31) statement -> . assignment
    (32) statement -> . if_statement
    (33) statement -> . while_loop
    (34) statement -> . for_loop
    (35) statement -> . compound_statement
    (36) statement -> . writeln
    (37) statement -> . write
    (38) statement -> . readln
    (39) statement -> . empty
    (40) assignment -> . variable ASSIGN expression
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) if_statement -> . IF expression THEN statement
    (45) while_loop -> . WHILE expression DO statement
    (46) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (47) for_loop -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (48) compound_statement -> . BEGIN statements END
    (50) writeln -> . WRITELN ( expression_list )
    (51) write -> . WRITE ( expression_list )
    (52) readln -> . READLN ( expression_list )
    (80) empty -> .
    (43) variable -> . ID
    (44) variable -> . variable LBRACKET expression RBRACKET

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READLN resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    BEGIN           shift and go to state 20
    WRITELN         shift and go to state 38
    WRITE           shift and go to state 39
    READLN          shift and go to state 40
    ;               reduce using rule 80 (empty -> .)
    END             reduce using rule 80 (empty -> .)
    ID              shift and go to state 37

  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! FOR             [ reduce using rule 80 (empty -> .) ]
  ! BEGIN           [ reduce using rule 80 (empty -> .) ]
  ! WRITELN         [ reduce using rule 80 (empty -> .) ]
  ! WRITE           [ reduce using rule 80 (empty -> .) ]
  ! READLN          [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]

    statements                     shift and go to state 45
    statement                      shift and go to state 24
    assignment                     shift and go to state 25
    if_statement                   shift and go to state 26
    while_loop                     shift and go to state 27
    for_loop                       shift and go to state 28
    compound_statement             shift and go to state 29
    writeln                        shift and go to state 30
    write                          shift and go to state 31
    readln                         shift and go to state 32
    empty                          shift and go to state 46
    variable                       shift and go to state 33

state 21

    (2) block -> declarations BEGIN optional_statements . END

    END             shift and go to state 47


state 22

    (3) optional_statements -> statements .
    (27) statements -> statements . statement ;
    (28) statements -> statements . statement
    (31) statement -> . assignment
    (32) statement -> . if_statement
    (33) statement -> . while_loop
    (34) statement -> . for_loop
    (35) statement -> . compound_statement
    (36) statement -> . writeln
    (37) statement -> . write
    (38) statement -> . readln
    (39) statement -> . empty
    (40) assignment -> . variable ASSIGN expression
    (41) if_statement -> . IF expression THEN statement ELSE statement
    (42) if_statement -> . IF expression THEN statement
    (45) while_loop -> . WHILE expression DO statement
    (46) for_loop -> . FOR ID ASSIGN expression TO expression DO statement
    (47) for_loop -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (48) compound_statement -> . BEGIN statements END
    (50) writeln -> . WRITELN ( expression_list )
    (51) write -> . WRITE ( expression_list )
    (52) readln -> . READLN ( expression_list )
    (80) empty -> .
    (43) variable -> . ID
    (44) variable -> . variable LBRACKET expression RBRACKET

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for WRITELN resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for READLN resolved as shift
  ! reduce/reduce conflict for END resolved using rule 3 (optional_statements -> statements .)
  ! shift/reduce conflict for ID resolved as shift
    END             reduce using rule 3 (optional_statements -> statements .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    BEGIN           shift and go to state 20
    WRITELN         shift and go to state 38
    WRITE           shift and go to state 39
    READLN          shift and go to state 40
    ;               reduce using rule 80 (empty -> .)
    ID              shift and go to state 37

  ! IF              [ reduce using rule 80 (empty -> .) ]
  ! WHILE           [ reduce using rule 80 (empty -> .) ]
  ! FOR             [ reduce using rule 80 (empty -> .) ]
  ! BEGIN           [ reduce using rule 80 (empty -> .) ]
  ! WRITELN         [ reduce using rule 80 (empty -> .) ]
  ! WRITE           [ reduce using rule 80 (empty -> .) ]
  ! READLN          [ reduce using rule 80 (empty -> .) ]
  ! ID              [ reduce using rule 80 (empty -> .) ]
  ! END             [ reduce using rule 80 (empty -> .) ]

    statement                      shift and go to state 48
    assignment                     shift and go to state 25
    if_statement                   shift and go to state 26
    while_loop                     shift and go to state 27
    for_loop                       shift and go to state 28
    compound_statement             shift and go to state 29
    writeln                        shift and go to state 30
    write                          shift and go to state 31
    readln                         shift and go to state 32
    empty                          shift and go to state 46
    variable                       shift and go to state 33

state 23

    (4) optional_statements -> empty .
    (39) statement -> empty .

  ! reduce/reduce conflict for END resolved using rule 4 (optional_statements -> empty .)
    END             reduce using rule 4 (optional_statements -> empty .)
    ;               reduce using rule 39 (statement -> empty .)
    IF              reduce using rule 39 (statement -> empty .)
    WHILE           reduce using rule 39 (statement -> empty .)
    FOR             reduce using rule 39 (statement -> empty .)
    BEGIN           reduce using rule 39 (statement -> empty .)
    WRITELN         reduce using rule 39 (statement -> empty .)
    WRITE           reduce using rule 39 (statement -> empty .)
    READLN          reduce using rule 39 (statement -> empty .)
    ID              reduce using rule 39 (statement -> empty .)

  ! END             [ reduce using rule 39 (statement -> empty .) ]


state 24

    (29) statements -> statement . ;
    (30) statements -> statement .

  ! shift/reduce conflict for ; resolved as shift
    ;               shift and go to state 49
    IF              reduce using rule 30 (statements -> statement .)
    WHILE           reduce using rule 30 (statements -> statement .)
    FOR             reduce using rule 30 (statements -> statement .)
    BEGIN           reduce using rule 30 (statements -> statement .)
    WRITELN         reduce using rule 30 (statements -> statement .)
    WRITE           reduce using rule 30 (statements -> statement .)
    READLN          reduce using rule 30 (statements -> statement .)
    ID              reduce using rule 30 (statements -> statement .)
    END             reduce using rule 30 (statements -> statement .)

  ! ;               [ reduce using rule 30 (statements -> statement .) ]


state 25

    (31) statement -> assignment .

    ;               reduce using rule 31 (statement -> assignment .)
    IF              reduce using rule 31 (statement -> assignment .)
    WHILE           reduce using rule 31 (statement -> assignment .)
    FOR             reduce using rule 31 (statement -> assignment .)
    BEGIN           reduce using rule 31 (statement -> assignment .)
    WRITELN         reduce using rule 31 (statement -> assignment .)
    WRITE           reduce using rule 31 (statement -> assignment .)
    READLN          reduce using rule 31 (statement -> assignment .)
    ID              reduce using rule 31 (statement -> assignment .)
    END             reduce using rule 31 (statement -> assignment .)
    ELSE            reduce using rule 31 (statement -> assignment .)


state 26

    (32) statement -> if_statement .

    ;               reduce using rule 32 (statement -> if_statement .)
    IF              reduce using rule 32 (statement -> if_statement .)
    WHILE           reduce using rule 32 (statement -> if_statement .)
    FOR             reduce using rule 32 (statement -> if_statement .)
    BEGIN           reduce using rule 32 (statement -> if_statement .)
    WRITELN         reduce using rule 32 (statement -> if_statement .)
    WRITE           reduce using rule 32 (statement -> if_statement .)
    READLN          reduce using rule 32 (statement -> if_statement .)
    ID              reduce using rule 32 (statement -> if_statement .)
    END             reduce using rule 32 (statement -> if_statement .)
    ELSE            reduce using rule 32 (statement -> if_statement .)


state 27

    (33) statement -> while_loop .

    ;               reduce using rule 33 (statement -> while_loop .)
    IF              reduce using rule 33 (statement -> while_loop .)
    WHILE           reduce using rule 33 (statement -> while_loop .)
    FOR             reduce using rule 33 (statement -> while_loop .)
    BEGIN           reduce using rule 33 (statement -> while_loop .)
    WRITELN         reduce using rule 33 (statement -> while_loop .)
    WRITE           reduce using rule 33 (statement -> while_loop .)
    READLN          reduce using rule 33 (statement -> while_loop .)
    ID              reduce using rule 33 (statement -> while_loop .)
    END             reduce using rule 33 (statement -> while_loop .)
    ELSE            reduce using rule 33 (statement -> while_loop .)


state 28

    (34) statement -> for_loop .

    ;               reduce using rule 34 (statement -> for_loop .)
    IF              reduce using rule 34 (statement -> for_loop .)
    WHILE           reduce using rule 34 (statement -> for_loop .)
    FOR             reduce using rule 34 (statement -> for_loop .)
    BEGIN           reduce using rule 34 (statement -> for_loop .)
    WRITELN         reduce using rule 34 (statement -> for_loop .)
    WRITE           reduce using rule 34 (statement -> for_loop .)
    READLN          reduce using rule 34 (statement -> for_loop .)
    ID              reduce using rule 34 (statement -> for_loop .)
    END             reduce using rule 34 (statement -> for_loop .)
    ELSE            reduce using rule 34 (statement -> for_loop .)


state 29

    (35) statement -> compound_statement .

    ;               reduce using rule 35 (statement -> compound_statement .)
    IF              reduce using rule 35 (statement -> compound_statement .)
    WHILE           reduce using rule 35 (statement -> compound_statement .)
    FOR             reduce using rule 35 (statement -> compound_statement .)
    BEGIN           reduce using rule 35 (statement -> compound_statement .)
    WRITELN         reduce using rule 35 (statement -> compound_statement .)
    WRITE           reduce using rule 35 (statement -> compound_statement .)
    READLN          reduce using rule 35 (statement -> compound_statement .)
    ID              reduce using rule 35 (statement -> compound_statement .)
    END             reduce using rule 35 (statement -> compound_statement .)
    ELSE            reduce using rule 35 (statement -> compound_statement .)


state 30

    (36) statement -> writeln .

    ;               reduce using rule 36 (statement -> writeln .)
    IF              reduce using rule 36 (statement -> writeln .)
    WHILE           reduce using rule 36 (statement -> writeln .)
    FOR             reduce using rule 36 (statement -> writeln .)
    BEGIN           reduce using rule 36 (statement -> writeln .)
    WRITELN         reduce using rule 36 (statement -> writeln .)
    WRITE           reduce using rule 36 (statement -> writeln .)
    READLN          reduce using rule 36 (statement -> writeln .)
    ID              reduce using rule 36 (statement -> writeln .)
    END             reduce using rule 36 (statement -> writeln .)
    ELSE            reduce using rule 36 (statement -> writeln .)


state 31

    (37) statement -> write .

    ;               reduce using rule 37 (statement -> write .)
    IF              reduce using rule 37 (statement -> write .)
    WHILE           reduce using rule 37 (statement -> write .)
    FOR             reduce using rule 37 (statement -> write .)
    BEGIN           reduce using rule 37 (statement -> write .)
    WRITELN         reduce using rule 37 (statement -> write .)
    WRITE           reduce using rule 37 (statement -> write .)
    READLN          reduce using rule 37 (statement -> write .)
    ID              reduce using rule 37 (statement -> write .)
    END             reduce using rule 37 (statement -> write .)
    ELSE            reduce using rule 37 (statement -> write .)


state 32

    (38) statement -> readln .
